--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,20 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: Vazir
+      fonts:
+        - asset: assets/fonts/Vazir.ttf
+    - family: IranNastaliq
+      fonts:
+        - asset: assets/fonts/IranNastaliq.ttf
+        
   assets:
     - assets/images/mahdi.jpg
     - assets/images/BackGround.jpg
+    - assets/images/smooth_green_gradient.png
 
