--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
-  flip_board: 
-    git:
-      url: https://github.com/cc-nogueira/flip_board.git
+  flutter_svg: ^2.0.7
   flutter:
     sdk: flutter
 
@@ -38,4 +36,4 @@ flutter:
     - assets/images/BackGround.jpeg
     - assets/images/smooth_green_gradient.png
     - assets/images/IslamicButton.png
-
+    - assets/icons/arrow_left.svg
