--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,13 @@ dependencies:
   shamsi_date: ^1.0.0
   intl: ^0.20.2
   provider: ^6.1.5
+  shared_preferences: ^2.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_native_splash: ^2.0.5
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
@@ -36,3 +41,18 @@ flutter:
     - assets/images/smooth_green_gradient.png
     - assets/images/IslamicButton.png
     - assets/icons/arrow_left.svg
+    - assets/images/Splash.png
+
+flutter_native_splash:
+  color: "#ffffff" # background color
+  image: assets/images/Splash.png
+  android: true
+  ios: true
+  fullscreen: true
+  android_gravity: fill
+  ios_content_mode: scaleAspectFill
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/AppIcon.png"
