--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,21 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <application
-        android:label="mahdavitasks"
-        android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:label="انتظار"
+        android:name=".MyApplication"
+        android:icon="@drawable/ic_notification">
+
+        <provider
+            android:name=".EarlyInitProvider"
+            android:authorities="${applicationId}.earlyinit"
+            android:exported="false"
+            android:initOrder="1000" />
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            tools:node="remove"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -25,11 +38,40 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <receiver
+            android:name="vn.hunghd.flutterdownloader.DownloadBroadcastReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.MY_PACKAGE_REPLACED"/>
+            </intent-filter>
+        </receiver>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- Force SystemJobService into main process -->
+        <service
+            android:name=".MySystemJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"
+            tools:replace="android:name" />
+
+        <!-- Force SystemAlarmService into main process -->
+        <service
+            android:name="androidx.work.impl.background.systemalarm.SystemAlarmService"
+            tools:replace="android:process"
+            android:process=""
+            android:exported="false" />
+
+        <!-- Force SystemForegroundService into main process -->
+        <service
+            android:name="androidx.work.impl.foreground.SystemForegroundService"
+            tools:replace="android:process"
+            android:process=""
+            android:exported="false" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
@@ -43,4 +85,7 @@
         </intent>
     </queries>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 </manifest>
