--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
-  flutter_svg: ^2.0.7
   flutter:
     sdk: flutter
+
+  flutter_local_notifications: ^17.1.4
+  workmanager: ^0.7.0
 
   hijri: ^3.0.0
   shamsi_date: ^1.0.0
@@ -19,6 +21,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   flutter_native_splash: ^2.0.5
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
